traefik/nginx-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ingress
  namespace: default

spec:
  entryPoints:
    - web

  routes:
  - match: PathPrefix(`/nginx`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
    middlewares:
      - name: stripprefix

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /nginx
